Ticket #14866 (closed defect: fixed)

Opened 6 months ago

Last modified 6 months ago

Various minor documentation fixes

Reported by: dghart Owned by:
Priority: low Milestone: 3.0
Component: documentation Version: 2.9-svn
Keywords: minor documentation Cc:
Blocked By: Patch: yes
Blocking:

Description

I'm attaching 3 patches.

gridbagspacer.diff changes the wxGridBagSizer::Add overload that adds a spacer, to actually mention the spacer.

There are a number of places in the docs (e.g. wxEvent::ShouldPropagate) where the first line of a 'brief' description is truncated, often at either an 'i.e.' or an 'e.g.'. This happens because doxygen takes the first '.' followed by a whitespace character as the end-of-line signal. This can be fixed by escaping that whitespace char, and doxygen.diff does this for as many instances as I could easily find.

others.diff is a collection of trivial typo fixes.

Attachments

gridbagspacer.diff download (1.1 KB) - added by dghart 6 months ago.
doxygen.diff download (31.9 KB) - added by dghart 6 months ago.
others.diff download (3.0 KB) - added by dghart 6 months ago.

Change History

Changed 6 months ago by dghart

Changed 6 months ago by dghart

Changed 6 months ago by dghart

Changed 6 months ago by vadz

Thanks a lot, especially for fixing the "i.e." problems!

Changed 6 months ago by VZ

(In [73083]) Fix documentation of wxGridBagSizer::Add() spacer overload.

Describe the width and height parameters.

See #14866.

Changed 6 months ago by VZ

(In [73084]) Fix premature truncation of brief descriptions in Doxygen comments.

Don't end the brief description at the first period if it's a period which is
part of "i.e." or "e.g.": escape the space following it to prevent Doxygen
from recognizing it as an end of sentence.

See #14866.

Changed 6 months ago by infinity77

Thank you for this, the "i.e." breaks were a bit funny to read in the Phoenix docs as well...

Changed 6 months ago by vadz

  • status changed from new to closed
  • resolution set to fixed

For some reason committing r73085 didn't close this ticket as it was supposed to.

Note: See TracTickets for help on using tickets.