Fix documentation of wxGridBagSizer::Add() spacer overload.

Describe the width and height parameters.

See #14866.

git-svn-id: https://svn.wxwidgets.org/svn/wx/wxWidgets/trunk@73083 c3d73ce0-8a6f-49c7-b76d-6d57e0e08775